RESOLVED FIXED55004
[chromium] DumpRenderTree --check-layout-test-sys-deps leaks 4 temp dirs
https://bugs.webkit.org/show_bug.cgi?id=55004
Summary [chromium] DumpRenderTree --check-layout-test-sys-deps leaks 4 temp dirs
Tony Chang
Reported 2011-02-22 15:15:53 PST
[chromium] DumpRenderTree --check-layout-test-sys-deps leaks 4 temp dirs
Attachments
Patch (2.76 KB, patch)
2011-02-22 15:17 PST, Tony Chang
no flags
Tony Chang
Comment 1 2011-02-22 15:17:06 PST
Tony Chang
Comment 2 2011-02-22 15:17:55 PST
On the windows bot, we're running out of scoped directories which leak because we don't call webkit_support::TearDownTestEnvironment() during sys check. We still leak these directories when we crash, but that should be much slower.
WebKit Commit Bot
Comment 3 2011-02-23 01:25:16 PST
Comment on attachment 83400 [details] Patch Clearing flags on attachment: 83400 Committed r79422: <http://trac.webkit.org/changeset/79422>
WebKit Commit Bot
Comment 4 2011-02-23 01:25:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.