2011-02-23  Tony Chang  <tony@chromium.org>

Reviewed by Kent Tamura.

        [chromium] DumpRenderTree --check-layout-test-sys-deps leaks 4 temp dirs
        https://bugs.webkit.org/show_bug.cgi?id=55004

        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (WebKitSupportTestEnvironment::WebKitSupportTestEnvironment):
        (WebKitSupportTestEnvironment::~WebKitSupportTestEnvironment):
        (main): Use a C++ object to ensure that TearDownTestEnvironment
            gets called when --check-layout-test-sys-deps is called

Canonical link: https://commits.webkit.org/69342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79422 268f45cc-cd09-0410-ab3c-d52691b4dbfc